refactor: jwt authentication